#33: Extra fix for RTL tree overflow

--- a/src/scss/admin/3rdparty/_jqtree.scss
+++ b/src/scss/admin/3rdparty/_jqtree.scss
@@ -75,6 +75,7 @@
 
   .jqtree-tree {
     @include reset;
+    flex-grow: 1;
 
 
     /* Reset default ul li styling */
